src/styles/variables.scss
$font-large: 19.2px;
$font-body: 16px;
$font-small: 13.33px;

$font-large-mobile: 18px;
$font-body-mobile: 16px;
$font-small-mobile: 14.22px;

$theme-duration: 0.333s;
$letter-spacing: 0.015em;

:root {
  // COMMON
  --text-font: 'Iosevka', 'IBM Plex Mono', 'Courier New', monospace;
  --body-transition: background-color #{$theme-duration} ease-out,
    color #{$theme-duration} ease-out;
  --max-width: 1200px;

  // Theme
  --gray-0: #ffffff;
  --gray-5: #f2f2f2;
  --gray-10: #e6e6e6;
  --gray-15: #d9d9d9;
  --gray-20: #cccccc;
  --gray-30: #b3b3b3;
  --gray-40: #999999;
  --gray-50: #808080;
  --gray-60: #666666;
  --gray-70: #4d4d4d;
  --gray-80: #333333;
  --gray-90: #191919;
  --gray-100: #000000;

  --background-color: #ffffff;
  --background-color-rgb: 255, 255, 255;
  --border-color: rgba(0, 0, 0, 0.1);
  --shadow-color: rgba(0, 0, 0, 0.2);
  --secondary-color: rgba(0, 0, 0, 0.5);

  --text-color: var(--gray-80);
}

:root[data-theme='dark'] {
  --gray-0: #000000;
  --gray-5: #2f2f2f;
  --gray-10: #1a1a1a;
  --gray-15: #262626;
  --gray-20: #515151;
  --gray-30: #494949;
  --gray-40: #666666;
  --gray-50: #808080;
  --gray-60: #999999;
  --gray-70: #b3b3b3;
  --gray-80: #cccccc;
  --gray-90: #e6e6e6;
  --gray-100: #ffffff;

  --background-color: #111;
  --background-color-rgb: 0, 0, 0;
  --border-color: rgba(255, 255, 255, 0.3);
  --shadow-color: rgba(255, 255, 255, 0.3);
  --secondary-color: rgba(255, 255, 255, 0.5);

  --text-color: #dedede;
}

:root[data-theme='kawai'] {
  --gray-0: #ff96cc;
  --gray-5: #ffaad7;
  --gray-10: #ffb9de;
  --gray-15: #ffd3ea;
  --gray-20: #c896ff;
  --gray-30: #d6afff;
  --gray-40: #e3c9ff;
  --gray-50: #f0e2ff;
  --gray-60: #fff0e2;
  --gray-70: #ffffe2;
  --gray-80: #cccccc;
  --gray-90: #e6e6e6;
  --gray-100: #ffffff;

  --background-color: #ffe2e2;
  --background-color-rgb: 255, 226, 226;
  --border-color: #c896ff;
  --shadow-color: #c896ff;
  --secondary-color: #ffffe2;

  --text-color: var(--gray-20);
}

